  usless without qemu-utils)
  * Removes .gitignore files from binaries.
  * Don't package nova-manage.1 man page if we aren't building docs.
  * Packages correctly: nova-manage.1 and not novamanage.1 !!!

  [ Soren Hansen ]
  * Bump required version of libvirt-bin on Ubuntu to 0.8.8.
  * Drop the last of the AOE dependencies. iSCSI is the default
    nowadays.

  [ Vishvananda Ishaya ]
  * Add dd to the sudo cmd list.
  * Add a nova-vncproxy package.

 -- Thomas Goirand <zigo@debian.org>  Thu, 14 Apr 2011 10:02:07 +0000

nova (2011.2-0ubuntu1) natty; urgency=low

  * New upstream release. 

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 15 Apr 2011 07:14:43 -0400

nova (2011.2~gamma1-0ubuntu1) natty; urgency=low

  [Chuck Short]
  * New upstream release.
  * debian/nova-doc.docs: Adjust directory to the right docs path.

  [Soren Hansen]
  * Refresh nova-manage-flags patch.
  * Adjust call to ajaxterm to work with the packaged ajaxterm instead
    of the one we ship in the tarball.
  * Remove all traces of the adminclient package. It moved to its own
    tarball. There are no known consumers, so this should not be a
    problem.
  * Remove build-dependency on python-suds again.
  * setup.py now takes care of installing the CA code, so yank those
    bits from debian/nova-common.install.
  * setup.py now places api-paste.ini correctly, so stop working around
    it.

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 08 Apr 2011 10:49:10 -0400

nova (2011.2~bzr925-0ubuntu1) natty; urgency=low

  [Chuck Short]
  * New upstream release.

  [Soren Hansen]
  * Make the build fail if the test suite does. The test that used to
    fail on the buildd's has been complete rewritten. (LP: #712481)
  * Specify that we need Sphinx > 1.0 to build.
  * Remove refresh_bzr_branches target from debian/rules. It is not used
    anymore.
  * Clean up after doc builds on debian/rules clean.
  * Add a nova-ajax-console-proxy package.